--- a/test/fixtures/categories.yml
+++ b/test/fixtures/categories.yml
@@ -1,4 +1,14 @@
-# Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+# == Schema Information
+#
+# Table name: categories
+#
+#  id         :integer          not null, primary key
+#  created_at :datetime         not null
+#  updated_at :datetime
+#  is_deleted :boolean          not null
+#  deleted_at :datetime
+#  name       :text
+#
 
 one:
   id: 1
