--- a/test/fixtures/ingredients.yml
+++ b/test/fixtures/ingredients.yml
@@ -1,4 +1,14 @@
-# Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+# == Schema Information
+#
+# Table name: ingredients
+#
+#  id         :integer          not null, primary key
+#  created_at :datetime         not null
+#  updated_at :datetime
+#  is_deleted :boolean          not null
+#  deleted_at :datetime
+#  name       :text
+#
 
 # This model initially had no columns defined. If you add columns to the
 # model remove the "{}" from the fixture names and add the columns immediately
