--- a/test/fixtures/recipes.yml
+++ b/test/fixtures/recipes.yml
@@ -1,4 +1,21 @@
-# Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+# == Schema Information
+#
+# Table name: recipes
+#
+#  id               :integer          not null, primary key
+#  created_at       :datetime         not null
+#  updated_at       :datetime
+#  is_deleted       :boolean          not null
+#  deleted_at       :datetime
+#  name             :text
+#  instructions     :text
+#  preparation_time :time             not null
+#  cooking_time     :time             not null
+#  portions_count   :integer          not null
+#  category_id      :integer          not null
+#  original_url     :text
+#  cook_id          :uuid
+#
 
 # This model initially had no columns defined. If you add columns to the
 # model remove the "{}" from the fixture names and add the columns immediately
